# LocoMan

./: CMakeLists.txt  README.md
include/LocoMan/: CFLMM.h
src/: CFLMM.cpp
src/tests/: TestCFLMM.cpp
